@@ -12,7 +12,6 @@ my $page = $pdf.add-page;
 lives-ok {
     $page.graphics: -> $gfx {
         my $pattern = $page.tiling-pattern(:BBox[0, 0, 25, 25], );
-        warn :$pattern.perl;
         $pattern.graphics: {
             .FillColor = :DeviceRGB[.7, .7, .9];
             .Rectangle(|$pattern<BBox>);
